gh-1056 - multiple data types allowed with AddElementsFromHdfs and SplitStore